<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="top">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/delete_share_message"
        android:textSize="16sp"
        android:layout_marginTop="5dp"
        android:layout_marginHorizontal="10dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginHorizontal="10dp"
        android:text="@string/delete_shared_with_me_warning"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end">

        <Button
            android:id="@+id/negativeDSWMD"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:text="@string/negative"
            style="@android:style/Widget.Holo.Button.Borderless"
            android:backgroundTint="#00FFFFFF"
            android:textColor="#2A3F75"
            />
        <Button
            android:id="@+id/positiveDSWMD"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:text="@string/positive"
            style="@android:style/Widget.Holo.Button.Borderless"
            android:backgroundTint="#00FFFFFF"
            android:textColor="#2A3F75"
            />

    </LinearLayout>

</LinearLayout>